# instagram_bot

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pwhash.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_needs_attention.py  003_add_profiles.py
backend/app/: config.py  database.py  deps.py  gym_context.txt  main.py  models.py  schemas.py
backend/app/routers/: auth.py  conversations.py  profiles.py  push.py  settings.py  webhook.py
backend/app/services/: instagram.py  llm.py  push.py  token_refresh.py  websocket.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json  privacy.html  sw.js
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: BotToggle.tsx  ConversationList.tsx  ConversationView.tsx  MessageBubble.tsx  NotificationSetup.tsx  ProfileDetail.tsx  ProfileList.tsx  StateSwitch.tsx
frontend/src/hooks/: usePushNotifications.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/types/: index.ts
